# unsloth-candle

./: .gitignore  Cargo.toml  README.md  build.rs  finetune_demo.py  pyproject.toml  run_tests.sh  test_basic.py  test_dora.py  test_flash_attn.py  test_llama.py  test_lora.py  test_rope_scaling.py  test_training.py
examples/: inference.py  train_lora.py
python/unsloth_candle/: __init__.py  modeling.py  trainer.py
scripts/: setup_env.sh  verify_finetune.py
src/: lib.rs  trainer.rs
src/core/: checkpoint.rs  loader.rs  mod.rs  op.rs  optimizer.rs  saver.rs
src/kernels/: mod.rs  mse.rs  quantization.rs  rope.rs
src/model/: cohere.rs  deepseek_v2.rs  gemma.rs  gemma3.rs  gpt_neox.rs  granite.rs  layers.rs  linear4bit.rs  llama.rs  llava.rs  mistral.rs  mixtral.rs  mod.rs  olmo.rs  phi3.rs  phi4.rs  qwen2.rs  qwen2_moe.rs  qwen2_vl.rs  qwen3.rs  qwen3_moe.rs  sarvam_moe.rs  starcoder2.rs  vision.rs
tests/: model_tests.rs  test_core_models.rs  test_new_models.rs  test_parity.py  test_qlora.rs
unsloth-rs/: Cargo.toml
unsloth-rs/src/: error.rs
unsloth-rs/src/kernels/: mod.rs  quantization.rs
