[package]
name = "unsloth-candle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "unsloth_candle"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23.0", features = ["extension-module"] }
candle-core = { version = "0.8.2", features = [] }
candle-nn = { version = "0.8.2" }
candle-transformers = "0.8.2"
cudarc = { version = "0.13.0", optional = true }
half = "2.4.1"
thiserror = "2.0.11"
safetensors = "0.5.2"
tokio = { version = "1.32.0", features = ["full"] } # For async downloading if needed
hf-hub = { version = "0.3.2", features = ["tokio"] } # For downloading weights
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
candle-flash-attn = { version = "0.8.2", optional = true }

unsloth-rs = { path = "./unsloth-rs" }
cubecl = { version = "0.9.0" }
cubecl-cuda = { version = "0.9.0", optional = true }
bytemuck = { version = "1.21", features = ["derive"] }

[features]
default = []
cuda = ["candle-core/cuda", "dep:cudarc", "dep:candle-flash-attn", "unsloth-rs/cuda"]
metal = ["candle-core/metal"]
flash-attn = ["cuda", "dep:candle-flash-attn"]

[build-dependencies]
# For potential PTX compilation or embedding
