[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "unsloth-candle"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "llama-cpp-python>=0.3.16",
    "torch>=2.8.0",
    "transformers>=4.57.6",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "unsloth_candle.unsloth_candle" # pointing to the rust module
